finalização do repositorio